objects/Heat_Stress_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Activity_during_overheat_easy_access_to__c</fullName>
        <label>HS_v1.0.11</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Heat_Stress_Survey_c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>During_summer_a_heat_related_emergency__c</fullName>
        <label>HS_v1.0.10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>During_summer_level_of_physical_activity__c</fullName>
        <label>HS_v1.0.6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>During_summer_reason_outside_for_exercis__c</fullName>
        <label>HS_v1.0.5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>During_summer_reason_outside_for_leisure__c</fullName>
        <label>HS_v1.0.4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>During_summer_reason_outside_for_work__c</fullName>
        <label>HS_v1.0.3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>During_summer_time_spend_out_each_day__c</fullName>
        <label>HS_v1.0.2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience_in_out_summer_Confusion__c</fullName>
        <label>HS_v1.0.9_1.5</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_in_out_summer_Dizziness__c</fullName>
        <label>HS_v1.0.9_1.3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_in_out_summer_Fainting__c</fullName>
        <label>HS_v1.0.9_1.6</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_in_out_summer_Headache__c</fullName>
        <label>HS_v1.0.9_1.2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_in_out_summer_Heavy_sweating__c</fullName>
        <label>HS_v1.0.9_1.7</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_in_out_summer_Muscle_cramp__c</fullName>
        <label>HS_v1.0.9_1.8</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_in_out_summer_Nausea__c</fullName>
        <label>HS_v1.0.9_1.4</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_in_out_summer_extr_tiredness__c</fullName>
        <label>HS_v1.0.9_1.9</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_in_out_summer_high_body_temp__c</fullName>
        <label>HS_v1.0.9_1.1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_breaks_per_day_during_Summer__c</fullName>
        <label>HS_v1.0.8</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Things_experience_exposure_heat_summer__c</fullName>
        <label>HS_v1.0.14</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_zipcode_live_during_majority_summer__c</fullName>
        <label>HS_v1.0.1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_during_summer_protect_more_than_50__c</fullName>
        <label>HS_v1.0.7</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worried_about_the_heat_during_the_summer__c</fullName>
        <label>HS_v1.0.13</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worried_heat_during_the_summer_outside__c</fullName>
        <label>HS_v1.0.12</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>HEAT</label>
    <nameField>
        <displayFormat>HS-{0000000000}</displayFormat>
        <label>Heat_Stress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HEATs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>